Nouveau plugin booklet amélioration gestion plugins amélioration de la stabilité

--- a/main/template/user.html
+++ b/main/template/user.html
@@ -48,7 +48,7 @@
                 </td>
             </tr>
             <tr>
-                <td>{{_("Password')}} (2)</td>
+                <td>{{_("Password")}} (2)</td>
                 <td colspan=2><input type="password" name="password_again" id="password_again" value=""/></td>
             </tr>
             <tr>
@@ -56,7 +56,7 @@
                 <td colspan=2>
                     <select  name="public_profile" id="public_profile">
                         {% if user.public_profile == 0 %}
-                        <option SELECTED value="0">{{_("Privé')}}</option>
+                        <option SELECTED value="0">{{_("Privé")}}</option>
                         {%else%}
                         <option value="0">Privé</option>
                         {%endif%}
